--- a/src/style/React_tabs.css
+++ b/src/style/React_tabs.css
@@ -6,31 +6,28 @@
 .react-tabs__tab-panel--selected: 활성화된 탭 패널 
 */
 
-.react-tabs__tab--selected {
-  border-bottom: 2px solid cornflowerblue;
-  color: black !important;
-}
-
 .react-tabs__tab {
   display: inline-box;
   border: none;
   border-bottom: 2px solid transparent;
-  transition: border-bottom-color 0.2s;
   margin: 4px;
   padding: 4px;
   color: gainsboro;
 }
 
+.react-tabs__tab--selected {
+  color: black;
+  border-bottom: 2px solid cornflowerblue;
+}
 .react-tabs__tab:hover {
-  border-bottom: 2px solid rgb(161, 191, 247);
-  transition: border-bottom-color 0.2s;
+  border-bottom: 2px solid cornflowerblue;
   color: rgb(114, 114, 114);
-  transition: color 0.5s;
 }
 .react-tabs__tab-list {
   border: none;
   margin-bottom: 70px;
 }
-.react-tabs__tab-panel {
+.react-tabs__tab-panel--selected {
   border-bottom: 2px solid cornflowerblue;
+  color: black;
 }
