--- a/src/style/React_tabs.css
+++ b/src/style/React_tabs.css
@@ -12,11 +12,13 @@
   transition: border-bottom-color, color 0.1s;
 }
 .react-tabs__tab--selected {
+  box-sizing: border-box;
   color: rgb(0, 0, 0);
   border-bottom: 2px solid cornflowerblue;
   transition: border-bottom, color 0.1s, 0.1s;
 }
 .react-tabs__tab {
+  box-sizing: border-box;
   border: none;
   border-bottom: 2px solid transparent;
   margin: 4px;
