탭 스크롤 구현

--- a/src/style/React_tabs.css
+++ b/src/style/React_tabs.css
@@ -32,9 +32,13 @@
 .react-tabs__tab-list {
   border: none;
   margin-bottom: 45px;
-  width: fit-content;
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
   height: fit-content;
+}
+
+.react-tabs__tab-list ul {
+  overflow: scroll;
+  white-space: nowrap;
 }
