--- a/src/styles/React_tabs.css
+++ b/src/styles/React_tabs.css
@@ -8,14 +8,16 @@
 
 .react-tabs__tab-panel--selected:focus {
   color: aliceblue;
-  border-bottom: 2px solid cornflowerblue;
-  transition: border-bottom-color, color 0.1s;
+  border-bottom: 2px solid #93c5fd;
+  transition:
+    border-bottom-color,
+    color 0.1s;
 }
 .react-tabs__tab--selected {
   background-color: inherit;
   box-sizing: border-box;
   color: rgb(0, 0, 0);
-  border-bottom: 2px solid cornflowerblue;
+  border-bottom: 2px solid #93c5fd;
 }
 .react-tabs__tab {
   box-sizing: border-box;
@@ -26,7 +28,7 @@
   color: gainsboro;
 }
 .react-tabs__tab:hover {
-  border-bottom: 2px solid cornflowerblue;
+  border-bottom: 2px solid #93c5fd;
   transition: border-bottom-color 0.1s;
   color: rgb(114, 114, 114);
 }
