feat(landing): add scroll snap feature

--- a/apps/landing/src/styles/globals.css
+++ b/apps/landing/src/styles/globals.css
@@ -47,7 +47,7 @@
   --color-secondary-800: #1c3264;
   --color-secondary-900: #0e1932;
 
-  --color-landing-background: #00512a;
+  --color-landing-background: #073629;
 }
 
 @theme {
