--- a/apps/web/src/style/globals.css
+++ b/apps/web/src/style/globals.css
@@ -76,6 +76,7 @@
 
 body {
   user-select: none;
+  font-synthesis: none;
 }
 
 a {
@@ -94,6 +95,7 @@ a {
   color: azure;
 }
 
-input, textarea {
+input,
+textarea {
   font-size: 16px !important;
 }
