--- a/apps/web/src/style/globals.css
+++ b/apps/web/src/style/globals.css
@@ -1,13 +1,6 @@
 @import 'tailwindcss';
 @import 'tailwind-scrollbar-hide/v4';
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
 @layer base {
   *,
   ::after,
@@ -15,6 +8,13 @@
   ::backdrop,
   ::file-selector-button {
     border-color: var(--color-gray-200, currentcolor);
+  }
+
+  @layer base {
+    button:not(:disabled),
+    [role='button']:not(:disabled) {
+      cursor: pointer;
+    }
   }
 }
 
@@ -39,6 +39,7 @@ html {
   --breakpoint-xs: 375px;
   --breakpoint-smd: 550px;
   --breakpoint-3xl: 1440px;
+  --breakpoint-mobile-max: 600px;
 
   /* container */
   --container-layout-max: 1280px;
